# OneDriveRansomwareSimulator

./: README.md  main.py  pyproject.toml
config/: key.txt  token.txt
ransomware_tests/dummy_filesystem/: Management summary - finance23.docx  Meeting key notes.docx
ransomware_tests/dummy_filesystem/Attachments/: Onboarding support teams.pptx
ransomware_tests/dummy_filesystem/Plan records/other/: hts_2023_revision_10_xlsx.xlsx
ransomware_tests/dummy_filesystem/State statistics/: Lottery_Mega_Millions_Winning_Numbers__Beginning_2002.csv
ransomware_utils/: msgraph_objects.py  onedrive_objects.py  onedrive_ransomware.py
